# RLSynC

./: Dockerfile  README.md  environment.yml  pyproject.toml  requirements.txt
data/: 3test.json  3train.json  3val.json  DATA_LICENSE.md  debug.json  test.csv___full_metrics.json  training_bonds.json
data/mt/: MIT_mixed_augm_model_average_20.pt  MolecularTransformerModel.md
data/rlsync/: best.pt
rlsync/: __init__.py
rlsync/agents/: __init__.py
rlsync/agents/rlsync/: __init__.py  agent.py  model.py  trainer.py
rlsync/environments/: __init__.py
rlsync/environments/two_synthon_completion/: __init__.py  mfp_limited.py  mfp_with_original.py  morgan_fingerprint.py
rlsync/utils/: __init__.py  acceptable_bonds.py  buffer.py  data.py  forward_synthesis.py  morgan_fp.py  morgan_fp_1024.py  spaces.py
scripts/: apply_agents.py  apply_agents_parallel.py  compute_results.sh  generate_agent_actions.py  generate_ground_truth_original.py  generate_topn_actions.py  keymetrics.py  metrics.py  offline_train.py  tests.sh
submodules/MolecularTransformer/: scores.txt  scores_100.txt  test-self.sh  test-two-synthon.sh  test_beam.txt
submodules/MolecularTransformer/available_models/: example.conf.json
submodules/MolecularTransformer/onmt/decoders/: ensemble.py
submodules/MolecularTransformer/onmt/translate/: beam.py  translator.py
